public/css/style.css
/* ... */
.box-date {
    margin: auto auto -20px auto;
    padding: 10px 10px 10px 10px;
    background-color: #609897;
    border-radius: 10px 10px 0px 0px;
    font-family: 'Montserrat-Regular';
    font-weight: 400;
    color: #fff;
    position: relative;
    top: -40px;
    width: 50%;
    text-align: center;
}

.box-date-modal {
    margin: auto auto -20px auto;
    padding: 10px 10px 10px 10px;
    background-color: #609897;
    border-radius: 10px 10px 0px 0px;
    font-family: 'Montserrat-Regular';
    font-weight: 400;
    color: #fff;
    position: relative;
    top: -40px;
    width: 50%;
    text-align: center;
}
.box-name a {
    margin: 0px 0px 3px 0px;
    padding: 0px 15px 0px 15px;
    width: 100%;
    /* height: 50px; */
    font-family: 'Montserrat-Medium';
    font-weight: 400;
    font-size: 16px;
    color: #000;
    line-height: 25px;
    text-align: center;
    display: inline-block;
    overflow: hidden;
    border: 0px solid red;
}
.box-text {
    margin: 0px 0px 5px 0px;
    padding: 0px 15px 0px 15px;
    width: 100%;
    /* height: 55px; */
    font-family: 'Montserrat-Regular';
    font-weight: 100;
    font-size: 14px;
    color: #333;
    line-height: 22px;
    text-align: center;
    display: inline-block;
    overflow: hidden;
    border: 0px solid red;
}
.box-text1 {
    margin: 0px 0px 20px 0px;
    padding: 0px 15px 0px 15px;
    width: 100%;
    height: auto;
    font-family: 'Montserrat-Regular';
    font-weight: 100;
    font-size: 16px;
    color: #333;
    line-height: 25px;
    text-align: center;
    display: inline-block;
    overflow: hidden;
    border: 0px solid red;
}


.home a{
display: flex;
  align-items: center;
  justify-content: center;
  height: 70px;
  background-color: #609897;
  color: #ffffff !important;
  text-decoration: none !important;
  font-size: 14px;
  padding: 30px 5px 30px 5px;
  border-radius: 0px 0px 10px 10px !important;
  line-height: 19px;
  margin: 0px 0px 10px 0px;
}

.home:hover{
  color: #ffffff !important;
  text-decoration: none !important;
}




.ab-bg {
    padding: 75px 0px 75px 0px !important;
    background-color: #f1f1f1 !important;
        border: 0px solid red;
}
.bal-btn {
    text-align: center;
    margin-top: 20px;
}

.bal-btn a {
    padding: 18px 35px;
    font-size: 16px;
    font-weight: 500;
    color: #fff !important;
    text-align: center;
    display: inline-block;
    border-radius: 30px;
    background-color: #2b9acb;
    transition: all 0.4s linear;
    font-family: 'Montserrat-Regular';
    border: 0px solid red;
}

.bal-btn :hover {
    background: #609897;
}
.main-brand {
    margin: 25px 0px 25px 0px;
    padding: 25px 15px 25px 15px;
    background-color: #fff;
    border-radius: 10px;
    height: 120px;
    text-align: center;
    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
}
.footer-bg {
    margin: 0px 0px 0px 0px;
    padding: 45px 0px 45px 0px;
    height: auto;
    background-image: url('../media/footer-bg.png');
    background-repeat: no-repeat;
    background-position: center;
    object-fit: cover;
    background-size: cover;
}
.footer-bar {
    margin: 0px 0px 20px 0px;
    padding: 0px 0px 0px 0px;
    width: 50px;
    height: 7px;
    background-color: #93689a;
    border-radius: 50px;
}
#list5 {
}
#list5 ul {
    list-style: none;
    margin: 0px 0px 0px 0px;
}
#list5 ul li a {
    margin: 0px 0px 0px -40px;
    padding: 0px 0px 0px 0px;
    width: 100%;
    height: auto;
    font-family: 'Montserrat-Regular';
    font-size: 16px;
    color: #fff !important;
    text-decoration: none;
    float: left;
    line-height: 35px;
    transition: all 0.4s linear;
    border: 0px solid red;
}
#list5 ul li :hover {
    color: #eee !important;
    text-decoration: underline !important;
}
.social-media1 a {
    margin: 0px 10px 15px 0px;
    color: #fff !important;
    text-decoration: none !important;
    font-size: 25px;
    display: inline-block;
    border: 0px solid red;
    transition: all 0.4s linear;
}
.social-media1 :hover {
    color: #5f439b !important;
    text-decoration: none;
}
.banner-text {
    top: 40%;
    position: absolute;
    border: 0px solid red;
    z-index: 666;
    width: 100%;
    text-align: center;
}
.shrink img {
    transition: 9s ease;
}
.shrink img:hover {
    -webkit-transform: scale(0.8);
    -ms-transform: scale(0.8);
    transform: scale(0.8);
    transition: 6s ease;
}
.card-image {
    display: block;
    overflow: hidden;
}
.card-image img {
    /*transform: scale3d(1.5, 1.5, 3);
    transition: transform 1s ease-in-out;*/

}
.card-image:hover img, .card-image:focus img, .card-btn-float:focus ~ .card-image img, .card-btn-float:hover ~ .card-image img {
    transform: scale3d(2, 2, 3);
    transition: transform 4s ease-in-out;
}
.blog-img {
    margin: 0px 0px 20px 0px;
    padding: 0px 0px 0px 0px;
    text-align: center;
    border-radius: 10px;
    display: inline-block;
    border: 0px solid red;
}
.post-date {
    float: left;
    margin-right: 15px;
    text-align: center;
    width: 90px;
    border: 0px solid red;
}
.day-blog {
    padding: 10px !important;
    display: block;
    font-size: 16px;
    font-weight: 500;
    font-weight: bold;
    background: #ccc;
    text-align: center;
    border-radius: 5px 5px 0px 0px;
    color: #000;
}
.month {
    padding: 10px !important;
    display: block;
    box-shadow: 0 -1px 0 0 rgba(0,0,0,0.07) inset;
    background: #2b9acb;
    color: #fff !important;
    text-align: center;
    font-size: 16px;
    border-radius: 0px 0px 5px 5px;
}
.post-meta {
    font-size: 14px;
    margin: 15px 0px 25px 0px;
    font-family: 'Montserrat-Regular';
}
.post-meta > span {
    display: inline-block;
    padding-right: 25px;
    padding-top: 10px;
    color: #000;
    font-family: 'Montserrat-Regular';
}
/* ... */

